# Vault-Launcher

./: .gitignore  .prettierignore  .releaserc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  feature_request.md
.github/workflows/: ci.yml  release.yml
messages/: en.json  fr.json
project.inlang/: project_id  settings.json
scripts/: licenses-check.mjs
src/: app.css  app.html  hooks.server.ts  hooks.ts
src-tauri/: Cargo.toml  build.rs  example.env  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: account.rs  deeplink.rs  lib.rs  main.rs  states.rs  tray_icon.rs  utils.rs
src-tauri/src/account/: auth.rs  login.rs  microsoft.rs  mojang.rs  xbox.rs
src-tauri/src/account/microsoft/: oauth.rs  xbox_live.rs
src-tauri/src/account/mojang/: minecraft.rs
src-tauri/src/account/xbox/: live.rs  xsts.rs
src-tauri/src/utils/: pcke_helper.rs  window_init.rs
src/lib/: constants.ts
src/lib/components/: index.ts  locale-switch.svelte  microsoft-connect.svelte  titlebar.svelte
src/lib/components/navbar/: app-sidebar.svelte  index.ts  nav-main.svelte  nav-profile.svelte  online-status.svelte  server-switcher.svelte  types.ts
src/lib/components/skin-viewer/: body.svelte  head.svelte  index.ts  left-arm.svelte  left-leg.svelte  renderer.svelte  right-arm.svelte  right-leg.svelte  utils.ts  viewer.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/(app)/: +layout.svelte
src/routes/(login)/: +layout.svelte
(+37 files in other folders)
